<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:gravity="bottom"
    android:background="@color/window_bg"
    android:baselineAligned="true"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/first_page_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/first_page_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_heart_word_selector" />

        <TextView
            android:id="@+id/first_page_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/main_guide_text_color_selector"
            android:gravity="center"
            android:text="@string/first_page_tv"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/second_page_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/second_page_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_heart_word_selector" />

        <TextView
            android:id="@+id/second_page_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/main_guide_text_color_selector"
            android:gravity="center"
            android:text="@string/second_page_tv"
            android:textSize="@dimen/common_text_size" />

       
        <View
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/third_page_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/third_page_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_heart_word_selector" />

        <TextView
            android:id="@+id/third_page_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/main_guide_text_color_selector"
            android:gravity="center"
            android:text="@string/thrid_page_tv"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/fourth_page_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/fourth_page_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_heart_word_selector" />

        <TextView
            android:id="@+id/fourth_page_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/main_guide_text_color_selector"
            android:gravity="center"
            android:text="@string/focese_page_tv"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/fifth_page_item"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/fifth_page_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_heart_word_selector" />

        <TextView
            android:id="@+id/fifth_page_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:background="@drawable/main_guide_text_color_selector"
            android:gravity="center"
            android:text="@string/five_page_tv"
            android:textSize="@dimen/common_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>